# fastapi-beanie

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.extend.yml
app/: main.py
app/server/: app.py  database.py
app/server/models/: product_review.py
app/server/routes/: product_review.py
