[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jason Washburn <35488541+jasonwashburn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.11.6"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
